--- a/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
+++ b/spectrum/autism_prevalence_map/templates/autism_prevalence_map/action_buttons.html
@@ -11,17 +11,17 @@
         <div class="relative border border-med-navy rounded-sm bg-light-gray">
             <label class="absolute top-0.5 left-14.5 text-xs text-med-navy uppercase" for="prevalence-slider">Prevalence (per 10,000)</label>
 
-            <div class="prev-slider-inner flex">
-                <div class="prev-slider-input input min relative">
+            <div class="flex">
+                <div class="relative">
                     <label class="absolute top-1.75 left-3 text-xs text-med-navy uppercase" for="prevalence-min">Min</label>
                     <input type="text" id="prevalence-min" class="w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-l text-1xs text-center text-med-navy">
                 </div>
-                <div class="prev-slider-input slider relative w-63.75 pt-4.5 pb-4.5 pl-4 pr-4 border-l-0.5 border-r-0.5 border-med-navy">
+                <div class="relative w-63.75 pt-4.5 pb-4.5 pl-4 pr-4 border-l-0.5 border-r-0.5 border-med-navy">
                     <div id="prevalence-slider"></div>
-                    <span class="sub-label absolute bottom-0.5 text-1xs text-med-navy uppercase">50</span>
-                    <span class="sub-label sub-label2 absolute bottom-0.5 right-3.75 text-1xs text-med-navy uppercase">150</span>
+                    <span class="absolute bottom-0.5 text-1xs text-med-navy uppercase">50</span>
+                    <span class="absolute bottom-0.5 right-3.75 text-1xs text-med-navy uppercase">150</span>
                 </div>
-                <div class="prev-slider-input input max relative">
+                <div class="relative">
                     <label class="absolute top-1.75 left-2.75 text-xs text-med-navy uppercase" for="prevalence-max">Max</label>
                     <input type="text" id="prevalence-max" class="w-10.5 pt-5.2 pb-1.25 bg-light-navy-2 rounded-sm-r text-1xs text-center text-med-navy">
                 </div>
